fix bug with animation overflow

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -10,6 +10,10 @@ body {
   height: 100%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 html,
 body,
 div,
